# serializer version: 1
# name: test_all_event_entities[event.button_a_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'pressed',
        'depressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.button_a_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Down',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Down',
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'down',
    'unique_id': 'button_a_00d_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_event_entities[event.button_a_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'pressed',
        'depressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Button A Down',
    }),
    'context': <ANY>,
    'entity_id': 'event.button_a_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_event_entities[event.button_a_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'pressed',
        'depressed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.button_a_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Up',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Up',
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'up',
    'unique_id': 'button_a_00c_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_event_entities[event.button_a_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'pressed',
        'depressed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Button A Up',
    }),
    'context': <ANY>,
    'entity_id': 'event.button_a_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
